Updates from Overleaf

--- a/chap2-motivation_for_steriles.tex
+++ b/chap2-motivation_for_steriles.tex
@@ -325,7 +325,7 @@ When performing a search for sterile neutrinos, typically there are three channe
     &\text{\nue appearance } (\numu \rightarrow \nue) &: sin^22\thetamue &\isdefinedas 4|U_{\mu 4}|^2|U_{e4}|^2 \\
     &\text{\nue disappearance } (\nue \rightarrow \nue) &: sin^22\thetaee &\isdefinedas 4|U_{e 4}|^2(1 - |U_{e4}|^2).
 \end{equation}
-It should be noted that \nue appearance depends on $U_{\mu 4}$ and $U_{e4}$, which \numu and \nue disappearance depend on respectively. The observation of \nue appearance would therefore automatically imply that \numu and \nue disappearance is also present. Additionally this allows these parameters to be over constrained \cite{SBN_paper}. The current global best fit values for the three mixing angles and the mass splitting term, $\Delta m^2_{41}$ are outlined in \TableRef{table:sterile_best_fit_params}.
+It should be noted that \nue appearance depends on $U_{\mu 4}$ and $U_{e4}$, which \numu and \nue disappearance depend on respectively. The observation of \nue appearance would therefore automatically imply that \numu and \nue disappearance is also present. Additionally, this allows these parameters to be over constrained \cite{SBN_paper}. The current global best fit values for the three mixing angles and the mass splitting term, $\Delta m^2_{41}$ are outlined in \TableRef{table:sterile_best_fit_params}.
 
 \begin{table}[h!]
 \begin{tabular}{c cc}
