--- a/glossary.tex
+++ b/glossary.tex
@@ -13,6 +13,7 @@
 \newacronym{cp}{CP}{charge-parity}
 \newacronym{cpa}{CPA}{Cathode Plane Assembly}
 \newacronym{crt}{CRT}{Cosmic Ray Tagger}
+\newacronym{dis}{DIS}{Deep Inelastic Scattering}
 \newacronym{donut}{DONUT}{Direct Observation of the Nu Tau}
 \newacronym{dune}{DUNE}{Deep Underground Neutrino Experiment}
 \newacronym{em}{EM}{electromagnetic}
@@ -45,6 +46,7 @@
 \newacronym{sbn}{SBN}{Short Baseline Neutrino}
 \newacronym{sbnd}{SBND}{Short Baseline Near Detector}
 \newacronym{sce}{SCE}{Space Charge Effect}
+\newacronym{sciboone}{SciBooNE}{SciBar Booster Neutrino Experiment}
 \newacronym{sipm}{SiPM}{Silicon Photomultiplier}
 \newacronym{sk}{SK}{Super Kamiokande}
 \newacronym{sm}{SM}{Standard Model}
