--- a/main.tex
+++ b/main.tex
@@ -58,8 +58,8 @@
   %\input{chap1-introduction}
   %\input{chap2-motivation_for_steriles}
   %\input{chap3-SBN_Program}
-  %\input{chap4-Energy_Reco}
-  \input{chap5-oscillation_inputs}
+  \input{chap4-Energy_Reco}
+  %\input{chap5-oscillation_inputs}
   \input{chap6-valor_analysis}
   %\input{chap7-Conclusion}
   %% To ignore a specific chapter while working on another, making the build faster, comment it out:
@@ -68,7 +68,7 @@
 
 %% Produce the appendices
 \begin{appendices}
-  \input{appendices}
+  %\input{appendices}
 \end{appendices}
 
 %% Produce the un-numbered back matter (e.g. colophon,
