--- a/mythesis.bib
+++ b/mythesis.bib
@@ -635,6 +635,34 @@ year = {1913}
    pages={160–170}
 }
 
+@misc{microboone_sce,
+  doi = {10.48550/ARXIV.1511.01563},
+  
+  url = {https://arxiv.org/abs/1511.01563},
+  
+  author = {Mooney, Michael},
+  
+  keywords = {Instrumentation and Detectors (physics.ins-det), High Energy Physics - Experiment (hep-ex), FOS: Physical sciences, FOS: Physical sciences},
+  
+  title = "{The MicroBooNE Experiment and the Impact of Space Charge Effects}",
+  
+  publisher = {arXiv},
+  
+  year = {2015},
+  
+  copyright = {arXiv.org perpetual, non-exclusive license}
+}
+
+
+@article{space_charge_math,
+author = {Palestini, Sandro and Mcdonald, Kirk},
+year = {2010},
+month = {01},
+pages = {},
+title = {Space Charge in Ionization Detectors},
+url   = {https://physics.princeton.edu/~mcdonald/examples/spacecharge.pdf}
+}
+
 @article{LArTPC_review,
 author = {Majumdar, Krishanu and Mavrokoridis, Konstantinos},
 year = {2021},
@@ -645,6 +673,53 @@ volume = {11},
 journal = {Applied Sciences},
 doi = {10.3390/app11062455}
 }
+
+@Book{Measurement_of_the_Antineutrino_Double-Differential_Charged-Current_Quasi-Elastic_Scattering_Cross_Section_at_MINERvA_book,
+author="Patrick, Cheryl E.",
+title="{Measurement of the Antineutrino Double-Differential Charged-Current Quasi-Elastic Scattering Cross Section at MINERvA}",
+year="2018",
+publisher="Springer International Publishing",
+address="Cham",
+isbn="978-3-319-69087-2",
+doi="10.1007/978-3-319-69087-2_2",
+url="https://doi.org/10.1007/978-3-319-69087-2_2"
+}
+
+@phdthesis{Measurement_of_the_Water_to_Scintillator_Charged-Current_Cross-Section_Ratio_for_Muon_Neutrinos_at_the_T2K_Near_Detector_thesis,
+      author        = "Scantamburlo, Enrico",
+      title         = "{Measurement of the Water to Scintillator Charged-Current Cross-Section Ratio for Muon Neutrinos at the T2K Near Detector}",
+      month         = "Oct",
+      year          = "2017",
+      url           = "https://cds.cern.ch/record/2299358",
+      note          = "Presented 06 Jun 2017",
+      school        = "UNIVERSIT\'E DE GEN\`EVE"
+}
+
+@article{Adjusting_neutrino_interaction_models_and_evaluating_uncertainties_using_NOvA_near_detector_data,
+    author = "Acero, M.A. and Adamson, P. and Agam, G. and others",
+    title = "{Adjusting neutrino interaction models and evaluating uncertainties using NOvA near detector data}",
+    journal = "The European Physical Journal C",
+    doi = "10.1140/epjc/s10052-020-08577-5",
+    year = "2020",
+    volume = "80",
+    number = {1119}
+}
+
+@article{Seagull_and_pion-in-flight_mec,
+  title = {Seagull and pion-in-flight currents in neutrino-induced $1N$ and $2N$ knockout},
+  author = {Van Cuyck, T. and Jachowicz, N. and Gonz\'alez-Jim\'enez, R. and Ryckebusch, J. and Van Dessel, N.},
+  journal = {Phys. Rev. C},
+  volume = {95},
+  issue = {5},
+  pages = {054611},
+  numpages = {14},
+  year = {2017},
+  month = {May},
+  publisher = {American Physical Society},
+  doi = {10.1103/PhysRevC.95.054611},
+  url = {https://link.aps.org/doi/10.1103/PhysRevC.95.054611}
+}
+
 
 @misc{sbnd_crt,
       title="{A Novel Cosmic Ray Tagger System for Liquid Argon TPC Neutrino Detectors}", 
@@ -885,6 +960,95 @@ doi = {10.3390/app11062455}
 	journal = {Physical Review D}
 }
 
+@article{t2k_experiment,
+title = "{The T2K experiment}",
+journal = "{Nuclear Instruments and Methods in Physics Research Section A: Accelerators, Spectrometers, Detectors and Associated Equipment}",
+volume = {659},
+number = {1},
+pages = {106-135},
+year = {2011},
+issn = {0168-9002},
+doi = {https://doi.org/10.1016/j.nima.2011.06.067},
+url = {https://www.sciencedirect.com/science/article/pii/S0168900211011910},
+author = {K. Abe and N. Abgrall and H. Aihara and Y. Ajima and J.B. Albert and D. Allan and P.-A. Amaudruz and C. Andreopoulos and B. Andrieu and M.D. Anerella and C. Angelsen and S. Aoki and O. Araoka and J. Argyriades and A. Ariga and T. Ariga and S. Assylbekov and J.P.A.M. {de André} and D. Autiero and A. Badertscher and O. Ballester and M. Barbi and G.J. Barker and P. Baron and G. Barr and L. Bartoszek and M. Batkiewicz and F. Bay and S. Bentham and V. Berardi and B.E. Berger and H. Berns and I. Bertram and M. Besnier and J. Beucher and D. Beznosko and S. Bhadra and P. Birney and D. Bishop and E. Blackmore and F.d.M. Blaszczyk and J. Blocki and A. Blondel and A. Bodek and C. Bojechko and J. Bouchez and T. Boussuge and S.B. Boyd and M. Boyer and N. Braam and R. Bradford and A. Bravar and K. Briggs and J.D. Brinson and C. Bronner and D.G. Brook-Roberge and M. Bryant and N. Buchanan and H. Budd and M. Cadabeschi and R.G. Calland and D. Calvet and J. {Caravaca Rodríguez} and J. Carroll and S.L. Cartwright and A. Carver and R. Castillo and M.G. Catanesi and C. Cavata and A. Cazes and A. Cervera and J.P. Charrier and C. Chavez and S. Choi and S. Chollet and G. Christodoulou and P. Colas and J. Coleman and W. Coleman and G. Collazuol and K. Connolly and P. Cooke and A. Curioni and A. Dabrowska and I. Danko and R. Das and G.S. Davies and S. Davis and M. Day and X. {De La Broise} and P. {de Perio} and G. {De Rosa} and T. Dealtry and A. Debraine and E. Delagnes and A. Delbart and C. Densham and F. {Di Lodovico} and S. {Di Luise} and P. {Dinh Tran} and J. Dobson and J. Doornbos and U. Dore and O. Drapier and F. Druillole and F. Dufour and J. Dumarchez and T. Durkin and S. Dytman and M. Dziewiecki and M. Dziomba and B. Ellison and S. Emery and A. Ereditato and J.E. Escallier and L. Escudero and L.S. Esposito and W. Faszer and M. Fechner and A. Ferrero and A. Finch and C. Fisher and M. Fitton and R. Flight and D. Forbush and E. Frank and K. Fransham and Y. Fujii and Y. Fukuda and M. Gallop and V. Galymov and G.L. Ganetis and F.C. Gannaway and A. Gaudin and J. Gaweda and A. Gendotti and M. George and S. Giffin and C. Giganti and K. Gilje and I. Giomataris and J. Giraud and A.K. Ghosh and T. Golan and M. Goldhaber and J.J. Gomez-Cadenas and S. Gomi and M. Gonin and M. Goyette and A. Grant and N. Grant and F. Grañena and S. Greenwood and P. Gumplinger and P. Guzowski and M.D. Haigh and K. Hamano and C. Hansen and T. Hara and P.F. Harrison and B. Hartfiel and M. Hartz and T. Haruyama and R. Hasanen and T. Hasegawa and N.C. Hastings and S. Hastings and A. Hatzikoutelis and K. Hayashi and Y. Hayato and T.D.J. Haycock and C. Hearty and R.L. Helmer and R. Henderson and S. Herlant and N. Higashi and J. Hignight and K. Hiraide and E. Hirose and J. Holeczek and N. Honkanen and S. Horikawa and A. Hyndman and A.K. Ichikawa and K. Ieki and M. Ieva and M. Iida and M. Ikeda and J. Ilic and J. Imber and T. Ishida and C. Ishihara and T. Ishii and S.J. Ives and M. Iwasaki and K. Iyogi and A. Izmaylov and B. Jamieson and R.A. Johnson and K.K. Joo and G. Jover-Manas and C.K. Jung and H. Kaji and T. Kajita and H. Kakuno and J. Kameda and K. Kaneyuki and D. Karlen and K. Kasami and V. Kasey and I. Kato and H. Kawamuko and E. Kearns and L. Kellet and M. Khabibullin and M. Khaleeq and N. Khan and A. Khotjantsev and D. Kielczewska and T. Kikawa and J.Y. Kim and S.-B. Kim and N. Kimura and B. Kirby and J. Kisiel and P. Kitching and T. Kobayashi and G. Kogan and S. Koike and T. Komorowski and A. Konaka and L.L. Kormos and A. Korzenev and K. Koseki and Y. Koshio and Y. Kouzuma and K. Kowalik and V. Kravtsov and I. Kreslo and W. Kropp and H. Kubo and J. Kubota and Y. Kudenko and N. Kulkarni and L. Kurchaninov and Y. Kurimoto and R. Kurjata and Y. Kurosawa and T. Kutter and J. Lagoda and K. Laihem and R. Langstaff and M. Laveder and T.B. Lawson and P.T. Le and A. {Le Coguie} and M. {Le Ross} and K.P. Lee and M. Lenckowski and C. Licciardi and I.T. Lim and T. Lindner and R.P. Litchfield and A. Longhin and G.D. Lopez and P. Lu and L. Ludovici and T. Lux and M. Macaire and L. Magaletti and K. Mahn and Y. Makida and C.J. Malafis and M. Malek and S. Manly and A. Marchionni and C. Mark and A.D. Marino and A.J. Marone and J. Marteau and J.F. Martin and T. Maruyama and T. Maryon and J. Marzec and P. Masliah and E.L. Mathie and C. Matsumura and K. Matsuoka and V. Matveev and K. Mavrokoridis and E. Mazzucato and N. McCauley and K.S. McFarland and C. McGrew and T. McLachlan and I. Mercer and M. Messina and W. Metcalf and C. Metelko and M. Mezzetto and P. Mijakowski and C.A. Miller and A. Minamino and O. Mineev and S. Mine and R.E. Minvielle and G. Mituka and M. Miura and K. Mizouchi and J.-P. Mols and L. Monfregola and E. Monmarthe and F. Moreau and B. Morgan and S. Moriyama and D. Morris and A. Muir and A. Murakami and J.F. Muratore and M. Murdoch and S. Murphy and J. Myslik and G. Nagashima and T. Nakadaira and M. Nakahata and T. Nakamoto and K. Nakamura and S. Nakayama and T. Nakaya and D. Naples and B. Nelson and T.C. Nicholls and K. Nishikawa and H. Nishino and K. Nitta and F. Nizery and J.A. Nowak and M. Noy and Y. Obayashi and T. Ogitsu and H. Ohhata and T. Okamura and K. Okumura and T. Okusawa and C. Ohlmann and K. Olchanski and R. Openshaw and S.M. Oser and M. Otani and R.A. Owen and Y. Oyama and T. Ozaki and M.Y. Pac and V. Palladino and V. Paolone and P. Paul and D. Payne and G.F. Pearce and C. Pearson and J.D. Perkin and M. Pfleger and F. Pierre and D. Pierrepont and P. Plonski and P. Poffenberger and E. Poplawska and B. Popov and M. Posiadala and J.-M. Poutissou and R. Poutissou and R. Preece and P. Przewlocki and W. Qian and J.L. Raaf and E. Radicioni and K. Ramos and P. Ratoff and T.M. Raufer and M. Ravonel and M. Raymond and F. Retiere and D. Richards and J.-L. Ritou and A. Robert and P.A. Rodrigues and E. Rondio and M. Roney and M. Rooney and D. Ross and B. Rossi and S. Roth and A. Rubbia and D. Ruterbories and R. Sacco and S. Sadler and K. Sakashita and F. Sanchez and A. Sarrat and K. Sasaki and P. Schaack and J. Schmidt and K. Scholberg and J. Schwehr and M. Scott and D.I. Scully and Y. Seiya and T. Sekiguchi and H. Sekiya and G. Sheffer and M. Shibata and Y. Shimizu and M. Shiozawa and S. Short and M. Siyad and D. Smith and R.J. Smith and M. Smy and J. Sobczyk and H. Sobel and S. Sooriyakumaran and M. Sorel and J. Spitz and A. Stahl and P. Stamoulis and O. Star and J. Statter and L. Stawnyczy and J. Steinmann and J. Steffens and B. Still and M. Stodulski and J. Stone and C. Strabel and T. Strauss and R. Sulej and P. Sutcliffe and A. Suzuki and K. Suzuki and S. Suzuki and S.Y. Suzuki and Y. Suzuki and Y. Suzuki and J. Swierblewski and T. Szeglowski and M. Szeptycka and R. Tacik and M. Tada and A.S. Tadepalli and M. Taguchi and S. Takahashi and A. Takeda and Y. Takenaga and Y. Takeuchi and H.A. Tanaka and K. Tanaka and M. Tanaka and M.M. Tanaka and N. Tanimoto and K. Tashiro and I.J. Taylor and A. Terashima and D. Terhorst and R. Terri and L.F. Thompson and A. Thorley and M. Thorpe and W. Toki and T. Tomaru and Y. Totsuka and C. Touramanis and T. Tsukamoto and V. Tvaskis and M. Tzanov and Y. Uchida and K. Ueno and M. Usseglio and A. Vacheret and M. Vagins and J.F. {Van Schalkwyk} and J.-C. Vanel and G. Vasseur and O. Veledar and P. Vincent and T. Wachala and A.V. Waldron and C.W. Walter and P.J. Wanderer and M.A. Ward and G.P. Ward and D. Wark and D. Warner and M.O. Wascko and A. Weber and R. Wendell and J. Wendland and N. West and L.H. Whitehead and G. Wikström and R.J. Wilkes and M.J. Wilking and Z. Williamson and J.R. Wilson and R.J. Wilson and K. Wong and T. Wongjirad and S. Yamada and Y. Yamada and A. Yamamoto and K. Yamamoto and Y. Yamanoi and H. Yamaoka and C. Yanagisawa and T. Yano and S. Yen and N. Yershov and M. Yokoyama and A. Zalewska and J. Zalipska and K. Zaremba and M. Ziembicki and E.D. Zimmerman and M. Zito and J. Zmuda},
+keywords = {Neutrinos, Neutrino oscillation, Long baseline, T2K, J-PARC, Super-Kamiokande},
+abstract = {The T2K experiment is a long baseline neutrino oscillation experiment. Its main goal is to measure the last unknown lepton sector mixing angle θ13 by observing νe appearance in a νμ beam. It also aims to make a precision measurement of the known oscillation parameters, Δm232 and sin22θ23, via νμ disappearance studies. Other goals of the experiment include various neutrino cross-section measurements and sterile neutrino searches. The experiment uses an intense proton beam generated by the J-PARC accelerator in Tokai, Japan, and is composed of a neutrino beamline, a near detector complex (ND280), and a far detector (Super-Kamiokande) located 295km away from J-PARC. This paper provides a comprehensive review of the instrumentation aspect of the T2K experiment and a summary of the vital information for each subsystem.}
+}
+
+@article{MINOS_numu_disapp_contour,
+	doi = {10.1103/physrevlett.122.091803},
+  
+	url = {https://doi.org/10.1103%2Fphysrevlett.122.091803},
+  
+	year = 2019,
+	month = {mar},
+  
+	publisher = {American Physical Society ({APS})},
+  
+	volume = {122},
+  
+	number = {9},
+  
+	author = {P. Adamson and I. Anghel and A. Aurisano and G. Barr and M. Bishai and A. Blake and G.{\hspace{0.167em}
+}J. Bock and D. Bogert and S.{\hspace{0.167em}}V. Cao and T.{\hspace{0.167em}}J. Carroll and C.{\hspace{0.167em}}M. Castromonte and R. Chen and S. Childress and J.{\hspace{0.167em}}A.{\hspace{0.167em}}B. Coelho and L. Corwin and D. Cronin-Hennessy and J.{\hspace{0.167em}}K. de Jong and S. De Rijck and A.{\hspace{0.167em}}V. Devan and N.{\hspace{0.167em}}E. Devenish and M.{\hspace{0.167em}}V. Diwan and C.{\hspace{0.167em}}O. Escobar and J.{\hspace{0.167em}}J. Evans and E. Falk and G.{\hspace{0.167em}}J. Feldman and W. Flanagan and M.{\hspace{0.167em}}V. Frohne and M. Gabrielyan and H.{\hspace{0.167em}}R. Gallagher and S. Germani and R.{\hspace{0.167em}}A. Gomes and M.{\hspace{0.167em}}C. Goodman and P. Gouffon and N. Graf and R. Gran and K. Grzelak and A. Habig and S.{\hspace{0.167em}}R. Hahn and J. Hartnell and R. Hatcher and A. Holin and J. Huang and J. Hylen and G.{\hspace{0.167em}}M. Irwin and Z. Isvan and C. James and D. Jensen and T. Kafka and S.{\hspace{0.167em}}M.{\hspace{0.167em}}S. Kasahara and L.{\hspace{0.167em}}W. Koerner and G. Koizumi and M. Kordosky and A. Kreymer and K. Lang and J. Ling and P.{\hspace{0.167em}}J. Litchfield and P. Lucas and W.{\hspace{0.167em}}A. Mann and M.{\hspace{0.167em}}L. Marshak and N. Mayer and C. McGivern and M.{\hspace{0.167em}}M. Medeiros and R. Mehdiyev and J.{\hspace{0.167em}}R. Meier and M.{\hspace{0.167em}}D. Messier and W.{\hspace{0.167em}}H. Miller and S.{\hspace{0.167em}}R. Mishra and S. Moed Sher and C.{\hspace{0.167em}}D. Moore and L. Mualem and J. Musser and D. Naples and J.{\hspace{0.167em}}K. Nelson and H.{\hspace{0.167em}}B. Newman and R.{\hspace{0.167em}}J. Nichol and J.{\hspace{0.167em}}A. Nowak and J. O'Connor and M. Orchanian and R.{\hspace{0.167em}}B. Pahlka and J. Paley and R.{\hspace{0.167em}}B. Patterson and G. Pawloski and A. Perch and M.{\hspace{0.167em}}M. Pfützner and D.{\hspace{0.167em}}D. Phan and S. Phan-Budd and R.{\hspace{0.167em}}K. Plunkett and N. Poonthottathil and X. Qiu and A. Radovic and B. Rebel and C. Rosenfeld and H.{\hspace{0.167em}}A. Rubin and P. Sail and M.{\hspace{0.167em}}C. Sanchez and J. Schneps and A. Schreckenberger and P. Schreiner and R. Sharma and A. Sousa and N. Tagg and R.{\hspace{0.167em}}L. Talaga and J. Thomas and M.{\hspace{0.167em}}A. Thomson and X. Tian and A. Timmons and J. Todd and S.{\hspace{0.167em}}C. Tognini and R. Toner and D. Torretta and G. Tzanakos and J. Urheim and P. Vahle and B. Viren and A. Weber and R.{\hspace{0.167em}}C. Webb and C. White and L.{\hspace{0.167em}}H. Whitehead and S.{\hspace{0.167em}}G. Wojcicki and R. Zwaska and},
+  
+	title = "{Search for Sterile Neutrinos in {MINOS} and {MINOS}$+$ Using a Two-Detector Fit}",
+  
+	journal = {Physical Review Letters}
+}
+@article{MiniBooNE/SciBooNE_numu_disapp_contour,
+	doi = {10.1103/physrevd.85.032007},
+  
+	url = {https://doi.org/10.1103%2Fphysrevd.85.032007},
+  
+	year = 2012,
+	month = {feb},
+  
+	publisher = {American Physical Society ({APS})},
+  
+	volume = {85},
+  
+	number = {3},
+  
+	author = {K. B. M. Mahn and Y. Nakajima and A. A. Aguilar-Arevalo and J. L. Alcaraz-Aunion and C. E. Anderson and A. O. Bazarko and S. J. Brice and B. C. Brown and L. Bugel and J. Cao and J. Catala-Perez and G. Cheng and L. Coney and J. M. Conrad and D. C. Cox and A. Curioni and R. Dharmapalan and Z. Djurcic and U. Dore and D. A. Finley and B. T. Fleming and R. Ford and A. J. Franke and F. G. Garcia and G. T. Garvey and C. Giganti and J. J. Gomez-Cadenas and J. Grange and C. Green and J. A. Green and P. Guzowski and A. Hanson and T. L. Hart and E. Hawker and Y. Hayato and K. Hiraide and W. Huelsnitz and R. Imlay and R. A. Johnson and B. J. P. Jones and G. Jover-Manas and G. Karagiorgi and P. Kasper and T. Katori and Y. K. Kobayashi and T. Kobilarcik and I. Kourbanis and S. Koutsoliotas and H. Kubo and Y. Kurimoto and E. M. Laird and S. K. Linden and J. M. Link and Y. Liu and Y. Liu and W. C. Louis and P. F. Loverre and L. Ludovici and C. Mariani and W. Marsh and S. Masuike and K. Matsuoka and C. Mauger and V. T. McGary and G. McGregor and W. Metcalf and P. D. Meyers and F. Mills and G. B. Mills and G. Mitsuka and Y. Miyachi and S. Mizugashira and J. Monroe and C. D. Moore and J. Mousseau and T. Nakaya and R. Napora and R. H. Nelson and P. Nienaber and J. A. Nowak and D. Orme and B. Osmanov and M. Otani and S. Ouedraogo and R. B. Patterson and Z. Pavlovic and D. Perevalov and C. C. Polly and E. Prebys and J. L. Raaf and H. Ray and B. P. Roe and A. D. Russell and F. Sanchez and V. Sandberg and R. Schirato and D. Schmitz and M. H. Shaevitz and T.-A. Shibata and F. C. Shoemaker and D. Smith and M. Soderberg and M. Sorel and P. Spentzouris and J. Spitz and I. Stancu and R. J. Stefanski and M. Sung and H. Takei and H. A. Tanaka and H.-K. Tanaka and M. Tanaka and R. Tayloe and I. J. Taylor and R. J. Tesarek and M. Tzanov and Y. Uchida and R. Van de Water and J. J. Walding and M. O. Wascko and D. H. White and H. B. White and M. J. Wilking and M. Yokoyama and H. J. Yang and G. P. Zeller and E. D. Zimmerman and},
+  
+	title = "{Dual baseline search for muon neutrino disappearance at $0.5 \text{eV}^2 < \Delta m^2 < 40 \text{eV}^2$}",
+  
+	journal = {Physical Review D}
+}
+
+@article{IceCube_numu_disapp_contour,
+	doi = {10.1103/physrevd.102.052009},
+  
+	url = {https://doi.org/10.1103%2Fphysrevd.102.052009},
+  
+	year = 2020,
+	month = {sep},
+  
+	publisher = {American Physical Society ({APS})},
+  
+	volume = {102},
+  
+	number = {5},
+  
+	author = {M.{\hspace{0.167em}
+}G. Aartsen and R. Abbasi and M. Ackermann and J. Adams and J.{\hspace{0.167em}}A. Aguilar and M. Ahlers and M. Ahrens and C. Alispach and N.{\hspace{0.167em}}M. Amin and K. Andeen and T. Anderson and I. Ansseau and G. Anton and C. Argüelles and J. Auffenberg and S. Axani and H. Bagherpour and X. Bai and A. Balagopal V. and A. Barbano and S.{\hspace{0.167em}}W. Barwick and B. Bastian and V. Basu and V. Baum and S. Baur and R. Bay and J.{\hspace{0.167em}}J. Beatty and K.-H. Becker and J. Becker Tjus and S. BenZvi and D. Berley and E. Bernardini and D.{\hspace{0.167em}}Z. Besson and G. Binder and D. Bindig and E. Blaufuss and S. Blot and C. Bohm and S. Böser and O. Botner and J. Böttcher and E. Bourbeau and J. Bourbeau and F. Bradascio and J. Braun and S. Bron and J. Brostean-Kaiser and A. Burgman and J. Buscher and R.{\hspace{0.167em}}S. Busse and T. Carver and C. Chen and E. Cheung and D. Chirkin and S. Choi and B.{\hspace{0.167em}}A. Clark and K. Clark and L. Classen and A. Coleman and G.{\hspace{0.167em}}H. Collin and J.{\hspace{0.167em}}M. Conrad and P. Coppin and P. Correa and D.{\hspace{0.167em}}F. Cowen and R. Cross and P. Dave and C. De Clercq and J.{\hspace{0.167em}}J. DeLaunay and H. Dembinski and K. Deoskar and S. De Ridder and A. Desai and P. Desiati and K.{\hspace{0.167em}}D. de Vries and G. de Wasseige and M. de With and T. DeYoung and S. Dharani and A. Diaz and J.{\hspace{0.167em}}C. D{\'{\i}}az-V{\'{e}}lez and H. Dujmovic and M. Dunkman and M.{\hspace{0.167em}}A. DuVernois and E. Dvorak and T. Ehrhardt and P. Eller and R. Engel and P.{\hspace{0.167em}}A. Evenson and S. Fahey and A.{\hspace{0.167em}}R. Fazely and A. Fedynitch and J. Felde and A.{\hspace{0.167em}}T. Fienberg and K. Filimonov and C. Finley and D. Fox and A. Franckowiak and E. Friedman and A. Fritz and T.{\hspace{0.167em}}K. Gaisser and J. Gallagher and E. Ganster and S. Garrappa and L. Gerhardt and T. Glauch and T. Glüsenkamp and A. Goldschmidt and J.{\hspace{0.167em}}G. Gonzalez and D. Grant and T. Gr{\'{e}}goire and Z. Griffith and S. Griswold and M. Günder and M. Gündüz and C. Haack and A. Hallgren and R. Halliday and L. Halve and F. Halzen and K. Hanson and J. Hardin and A. Haungs and S. Hauser and D. Hebecker and D. Heereman and P. Heix and K. Helbing and R. Hellauer and F. Henningsen and S. Hickford and J. Hignight and G.{\hspace{0.167em}}C. Hill and K.{\hspace{0.167em}}D. Hoffman and R. Hoffmann and T. Hoinka and B. Hokanson-Fasig and K. Hoshina and F. Huang and M. Huber and T. Huber and K. Hultqvist and M. Hünnefeld and R. Hussain and S. In and N. Iovine and A. Ishihara and M. Jansson and G.{\hspace{0.167em}}S. Japaridze and M. Jeong and B.{\hspace{0.167em}}J.{\hspace{0.167em}}P. Jones and F. Jonske and R. Joppe and D. Kang and W. Kang and A. Kappes and D. Kappesser and T. Karg and M. Karl and A. Karle and U. Katz and M. Kauer and M. Kellermann and J.{\hspace{0.167em}}L. Kelley and A. Kheirandish and J. Kim and T. Kintscher and J. Kiryluk and T. Kittler and S.{\hspace{0.167em}}R. Klein and R. Koirala and H. Kolanoski and L. Köpke and C. Kopper and S. Kopper and D.{\hspace{0.167em}}J. Koskinen and P. Koundal and M. Kowalski and K. Krings and G. Krückl and N. Kulacz and N. Kurahashi and A. Kyriacou and J.{\hspace{0.167em}}L. Lanfranchi and M.{\hspace{0.167em}}J. Larson and F. Lauber and J.{\hspace{0.167em}}P. Lazar and K. Leonard and A. Leszczy{\'{n}}ska and Y. Li and Q.{\hspace{0.167em}}R. Liu and E. Lohfink and C.{\hspace{0.167em}}J. Lozano Mariscal and L. Lu and F. Lucarelli and A. Ludwig and J. Lünemann and W. Luszczak and Y. Lyu and W.{\hspace{0.167em}}Y. Ma and J. Madsen and G. Maggi and K.{\hspace{0.167em}}B.{\hspace{0.167em}}M. Mahn and Y. Makino and P. Mallik and S. Mancina and I.{\hspace{0.167em}}C. Mari{\c{s}} and R. Maruyama and K. Mase and R. Maunu and F. McNally and K. Meagher and M. Medici and A. Medina and M. Meier and S. Meighen-Berger and J. Merz and T. Meures and J. Micallef and D. Mockler and G. Moment{\'{e}} and T. Montaruli and R.{\hspace{0.167em}}W. Moore and R. Morse and M. Moulai and P. Muth and R. Nagai and U. Naumann and G. Neer and L.{\hspace{0.167em}}V. Nguyen and H. Niederhausen and M.{\hspace{0.167em}}U. Nisa and S.{\hspace{0.167em}}C. Nowicki and D.{\hspace{0.167em}}R. Nygren and A. Obertacke Pollmann and M. Oehler and A. Olivas and A. O'Murchadha and E. O'Sullivan and T. Palczewski and H. Pandya and D.{\hspace{0.167em}}V. Pankova and N. Park and G.{\hspace{0.167em}}K. Parker and E.{\hspace{0.167em}}N. Paudel and P. Peiffer and C. P{\'{e}}rez de los Heros and S. Philippen and D. Pieloth and S. Pieper and E. Pinat and A. Pizzuto and M. Plum and Y. Popovych and A. Porcelli and M. Prado Rodriguez and P.{\hspace{0.167em}}B. Price and G.{\hspace{0.167em}}T. Przybylski and C. Raab and A. Raissi and M. Rameez and L. Rauch and K. Rawlins and I.{\hspace{0.167em}}C. Rea and A. Rehman and R. Reimann and B. Relethford and M. Renschler and G. Renzi and E. Resconi and W. Rhode and M. Richman and B. Riedel and S. Robertson and M. Rongen and C. Rott and T. Ruhe and D. Ryckbosch and D. Rysewyk Cantu and I. Safa and S.{\hspace{0.167em}}E. Sanchez Herrera and A. Sandrock and J. Sandroos and M. Santander and S. Sarkar and S. Sarkar and K. Satalecka and M. Scharf and M. Schaufel and H. Schieler and P. Schlunder and T. Schmidt and A. Schneider and J. Schneider and F.{\hspace{0.167em}}G. Schröder and L. Schumacher and S. Sclafani and D. Seckel and S. Seunarine and S. Shefali and M. Silva and B. Smithers and R. Snihur and J. Soedingrekso and D. Soldin and M. Song and G.{\hspace{0.167em}}M. Spiczak and C. Spiering and J. Stachurska and M. Stamatikos and T. Stanev and R. Stein and J. Stettner and A. Steuer and T. Stezelberger and R.{\hspace{0.167em}}G. Stokstad and A. Stö{\ss}l and N.{\hspace{0.167em}}L. Strotjohann and T. Stürwald and T. Stuttard and G.{\hspace{0.167em}}W. Sullivan and I. Taboada and F. Tenholt and S. Ter-Antonyan and A. Terliuk and S. Tilav and K. Tollefson and L. Tomankova and C. Tönnis and S. Toscano and D. Tosi and A. Trettin and M. Tselengidou and C.{\hspace{0.167em}}F. Tung and A. Turcati and R. Turcotte and C.{\hspace{0.167em}}F. Turley and B. Ty and E. Unger and M.{\hspace{0.167em}}A. Unland Elorrieta and M. Usner and J. Vandenbroucke and W. Van Driessche and D. van Eijk and N. van Eijndhoven and D. Vannerom and J. van Santen and S. Verpoest and M. Vraeghe and C. Walck and A. Wallace and M. Wallraff and T.{\hspace{0.167em}}B. Watson and C. Weaver and A. Weindl and M.{\hspace{0.167em}}J. Weiss and J. Weldert and C. Wendt and J. Werthebach and B.{\hspace{0.167em}}J. Whelan and N. Whitehorn and K. Wiebe and C.{\hspace{0.167em}}H. Wiebusch and D.{\hspace{0.167em}}R. Williams and L. Wills and M. Wolf and T.{\hspace{0.167em}}R. Wood and K. Woschnagg and G. Wrede and J. Wulff and X.{\hspace{0.167em}}W. Xu and Y. Xu and J.{\hspace{0.167em}}P. Yanez and G. Yodh and S. Yoshida and T. Yuan and Z. Zhang and M. Zöcklein and},
+  
+	title = "{Searching for {eV}-scale sterile neutrinos with eight years of atmospheric neutrinos at the {IceCube} Neutrino Telescope}",
+  
+	journal = {Physical Review D}
+}
+
+@article{MINOS+,
+    author = "Tzanankos, G. and others",
+    collaboration = "MINOS+",
+    title = "{MINOS+: a Proposal to FNAL to run MINOS with the medium energy NuMI beam}",
+    reportNumber = "FERMILAB-PROPOSAL-1016",
+    doi = "10.2172/1028838",
+    month = "5",
+    year = "2011"
+}
+
 @misc{VALOR,
    title="{The VALOR Group}",
    howpublished = "{\href{https://valor.pp.rl.ac.uk}{https://valor.pp.rl.ac.uk}}",
@@ -912,7 +1076,8 @@ howpublished = {\href{https://docs.dunescience.org/cgi-bin/private/ShowDocument?
           pages = "87--104",
           year = "2010"
 }
-        
+
+
 @phdthesis{Dom's_thesis,
     month = {July},
     title = "{Developments Towards a {\ensuremath{\nu}}e CC Sterile Appearance Sensitivity in the Short-Baseline Neutrino Programme}",
