--- a/preamble.tex
+++ b/preamble.tex
@@ -5,7 +5,8 @@
 \usepackage{verbatim}
 \usepackage{multirow}
 \usepackage{nicematrix}
-\usepackage{feynmf} % feynman diagrams
+\usepackage{lipsum}
+\usepackage{feynman}
 \usepackage{adjustbox}
 \usepackage{arydshln}
 \usepackage{subcaption}
